Campaigns with swagger

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,8 +6,17 @@
     "esModuleInterop": true,
     "allowSyntheticDefaultImports": true,
     "outDir": "./dist",
-    "rootDir": "./src"
+    "rootDir": "./src",
+    "moduleResolution": "node",
+    "baseUrl": "./src",
+    "paths": {
+      "controllers/*": ["controllers/*"]
+    }
   },
-  "include": ["src/**/*.ts"],
+  "ts-node": {
+    "esm": true,
+    "experimentalSpecifierResolution": "node"
+  },
+  "include": ["index.ts","src/**/*.ts"],
   "exclude": ["node_modules", "dist"]
 }
