--- a/package.json
+++ b/package.json
@@ -2,10 +2,11 @@
   "name": "be",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "index.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "ts-node --esm app.ts"
+    "start": "ts-node index.ts",
+    "dev": "nodemon --exec ts-node index.ts"
   },
   "type": "module",
   "keywords": [],
@@ -16,12 +17,16 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "swagger-jsdoc": "^6.2.8",
-    "swagger-ui-express": "^5.0.0"
+    "swagger-ui-express": "^5.0.0",
+    "yamljs": "^0.3.0"
   },
   "devDependencies": {
     "@types/express": "^4.17.17",
     "@types/node": "^20.4.10",
     "@types/swagger-jsdoc": "^6.0.1",
+    "@types/swagger-ui-express": "^4.1.3",
+    "@types/yamljs": "^0.2.31",
+    "nodemon": "^3.0.1",
     "ts-node": "^10.9.1",
     "typescript": "^5.1.6"
   }
